# openapi-mcp-proxy

./: .dockerignore  .gitignore  Dockerfile  LICENSE.md  README.md  claude_package.json  docker-compose.yml  main.py  manifest.json  pyproject.toml  verify-installation-methods.sh
.github/workflows/: build-and-publish.yml  ci.yml
openapi_mcp_proxy/: __init__.py  main.py
openapi_mcp_proxy/config/: __init__.py  settings.py
openapi_mcp_proxy/models/: __init__.py  api_config.py  endpoint.py  pagination.py  schema.py
openapi_mcp_proxy/services/: __init__.py  config_manager.py  openapi_cache.py  openapi_explorer.py  tool_registry.py
openapi_mcp_proxy/tools/: __init__.py  api_exploration.py  api_management.py  base.py
openapi_mcp_proxy/utils/: __init__.py  errors.py  logging.py
