[project]
name = "openapi-mcp-proxy"
version = "0.1.0"
description = "MCP Server for OpenAPI Schema Exploration"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "OpenAPI MCP Proxy Contributors"}
]
keywords = ["mcp", "openapi", "api", "schema", "exploration", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dependencies = [
    "aiofiles>=24.1.0",
    "httpx>=0.28.1",
    "mcp>=1.12.3",
    "pydantic>=2.11.7",
    "pyyaml>=6.0.2",
]

[project.scripts]
openapi-mcp-proxy = "openapi_mcp_proxy.main:run"

[project.urls]
Homepage = "https://github.com/nyudenkov/openapi-mcp-proxy"
Repository = "https://github.com/nyudenkov/openapi-mcp-proxy"
Issues = "https://github.com/nyudenkov/openapi-mcp-proxy/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
